# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  arg_parser.py  building_difference_tree.py  custom_exceptions.py  gendiff_.py  generate_diff.py  parse.py  parsing.py  parsing_date.py
gendiff/formatters/: json.py  make_formatter.py  plain.py  stylish.py
gendiff/modules/: gen_diff.py  generate_diff.py
gendiff/scripts/: gen_diff.py  gendiff.py  gendiff1.py  gendiff_file.py
tests/: test_gen_diff.py
