[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The difference between the two data structures"
authors = ["Dmitry Grigoriev <diman03051995@mail.ru>"]
readme = "README.md"
repository  = "https://github.com/Dmitry597/python-project-50"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_file:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
